# web/api/login.go
@@ -1,6 +1,9 @@
 package api
 
 import (
+	"encoding/json"
+	"io/ioutil"
+	"log"
 	"strings"
 	"time"
 
@@ -157,7 +160,7 @@ func Login(c *gin.Context) {
 	}
 	// 密码
 	if len(loginInfos.Password) != 32 {
-		retError(c, 3, nil)
+		retError(c, 10, nil)
 		return
 	}
 	// 验证码 -- 待定
@@ -229,6 +232,143 @@ func Login(c *gin.Context) {
 			userInfo.Email = "******" + userInfo.Email[len(emails[0]):]
 		}
 	}
+	retSuccess(c, map[string]interface{}{
+		"id":        userInfo.ID,
+		"jwt":       jwt,
+		"name":      userInfo.Name,
+		"mobile":    userInfo.Mobile,
+		"permisson": userInfo.Permisson,
+		"vip":       userInfo.VIP,
+		"email":     userInfo.Email,
+		"address":   userInfo.Address,
+		"photo":     userInfo.Photo,
+	})
+}
+
+// GetLogin 获取背景图列表....
+// @Tags login
+// @Summary 获取背景图列表
+// @Description 获取背景图列表
+// @Accept  json
+// @Produce  json
+// @Success 200 {string} json "{"Error":"Success","Data": object}"
+// @Failure  500 {string} json "{"Error":"error","Data": null}"
+// @Failure  301 {string} json "{"Error":"Re-login","Data": object}"
+// @Router /login/logo [get]
+func GetLogin(c *gin.Context) {
+	s := service.GetServer()
+	logoinfos := make([]db.Logoinfo, 0)
+	err := s.Raw("SELECT * FROM logoinfos WHERE id IN (SELECT max(id) FROM logoinfos WHERE del = 0  GROUP BY types)").Scan(&logoinfos).Error
+	if err != nil {
+		retError(c, 7, err)
+		return
+	}
+	//
+	maps := make(map[int]string, 0)
+	maps[1] = "/images/logo/beijing.jpg"
+	maps[2] = "/images/logo/beijinglogo.jpg"
+	maps[3] = "/images/logo/shanbiaologo.jpg"
+	for _, v := range logoinfos {
+		maps[v.ID] = v.URL
+	}
+	retSuccess(c, maps)
+}
+
+// GetCode .
+// @Tags login
+// @Summary 获取错误代码
+// @Description 获取错误代码
+// @Accept  json
+// @Produce  json
+// @Success 200 {string} json "{"Error":"Success","Data": object}"
+// @Failure  500 {string} json "{"Error":"error","Data": null}"
+// @Failure  301 {string} json "{"Error":"Re-login","Data": object}"
+// @Router /login/code [get]
+func GetCode(c *gin.Context) {
+	retSuccess(c, code)
+}
+
+// var code = make([]Code, 0)
+var code = make([]map[string]interface{}, 0)
+
+// SetCode 读取错误代码
+func SetCode() {
+	body, err := ioutil.ReadFile("./web/api/code.json")
+	if err != nil {
+		log.Fatal("SetCode error! [error]", err)
+	}
+	err = json.Unmarshal(body, &code)
+	if err != nil {
+		log.Fatal("SetCode error! [error]", err)
+	}
+}
+
+// GetLoginInfo .
+// @Tags login
+// @Summary 获取登陆信息
+// @Description 获取登陆信息
+// @Accept  json
+// @Produce  json
+// @Param 	Authorization 	header 	string 	true "With the bearer started JWT"
+// @Success 200 {string} json "{"Error":"Success","Data": object}"
+// @Failure  500 {string} json "{"Error":"error","Data": null}"
+// @Failure  301 {string} json "{"Error":"Re-login","Data": object}"
+// @Router /login/info [get]
+func GetLoginInfo(c *gin.Context) {
+	// 获取账户信息
+	s := service.GetServer()
+	userInfo, err := s.CheckUserID(c.GetInt("id"))
+	if err != nil {
+		c.JSON(301, 19)
+		return
+	}
+	// 判断删除
+	if userInfo.Del != 0 {
+		c.JSON(301, 19)
+		return
+	}
+	// 判断状态
+	if userInfo.Status != 1 {
+		c.JSON(301, 19)
+		return
+	}
+	// 判断有效期
+	nows := time.Now().Unix()
+	if nows > userInfo.Expiredtime && userInfo.Expiredtime != 0 {
+		// 更新用户状态未已过期
+		s.UpdateUser(userInfo.ID, map[string]interface{}{
+			"status": 3,
+		})
+		c.JSON(301, 19)
+		return
+	}
+	// 创建登陆信息
+	logininfo := db.Logininfo{
+		UID:        userInfo.ID,
+		Createtime: nows,
+		IP:         c.ClientIP(),
+	}
+	err = s.CreateLoginfo(logininfo)
+	if err != nil {
+		retError(c, 7, err)
+		return
+	}
+	// 对手机号码进行隐藏
+	if userInfo.Mobile != "" && len(userInfo.Mobile) == 11 {
+		userInfo.Mobile = userInfo.Mobile[:3] + "****" + userInfo.Mobile[7:]
+	}
+	// 对email进行隐藏
+	if userInfo.Email != "" {
+		emails := strings.Split(userInfo.Email, "@")
+		if len(emails) < 2 {
+			userInfo.Email = ""
+		} else if len(emails[0]) > 3 {
+			userInfo.Email = emails[0][:2] + "******" + userInfo.Email[len(emails[0]):]
+		} else {
+			userInfo.Email = "******" + userInfo.Email[len(emails[0]):]
+		}
+	}
+	jwt := c.GetHeader("Authorization")
 	retSuccess(c, map[string]interface{}{
 		"id":        userInfo.ID,
 		"jwt":       jwt,
